--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -1,12 +1,25 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Schedule my day</title>
     <link rel="stylesheet" href="{% static 'myapp/css/style.css' %}">
+    <!-- --------- Fonts imports --------- -->
+     <!-- Winky Rough -->
+    <link href="https://fonts.googleapis.com/css2?family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
+    <!-- Fredericka the Great -->
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
+
 <body>
-    <h1>Test</h1>
+    <h1 class="title">Are you ready to "<span class="shedule">Schedule your day</span>"?</h1>
+
+    
+    <script src="{% static 'myapp/js/script.js' %}"></script>
+
 </body>
+
 </html>
