--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -15,11 +15,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
 
 <body>
+    <!-- title -->
     <h1 class="title">Are you ready to "<span class="shedule">Schedule your day</span>"?</h1>
 
-    
-    <script src="{% static 'myapp/js/script.js' %}"></script>
+    <div class="container">
+        <p class="txt">Do you already have an account?</p>
+        <button class="btn">Log In</button>
+        <p class="txt">Don't have an account yet?</p>
+        <button class="btn">Sign Up</button>
+    </div>
 
+    <script src="{% static 'myapp/js/script.js' %}"></script>
 </body>
 
 </html>
