login page style

--- a/myapp/templates/myapp/login.html
+++ b/myapp/templates/myapp/login.html
@@ -14,6 +14,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 class="title">Login</h1>
+    <div class="container">
+        <h1 class="title">Login</h1>
+        <div class="username input-field">
+            <p class="input-txt">Username:</p>
+            <input type="text" name="username" placeholder="Username" />
+        </div>
+        <div class="password input-field">
+            <p class="input-txt">Password:</p>
+            <input type="password" name="password" placeholder="Pasword">
+        </div>
+        <button class="btn">Login</button>
+    </div>
+
 </body>
 </html>
