--- a/myapp/static/myapp/css/login.css
+++ b/myapp/static/myapp/css/login.css
@@ -24,3 +24,61 @@ body{
     /* Height of the page */
     height: 100vh;
 }
+
+.container{
+    /* Small styling */
+    border: 2px solid var(--yellowish-gren);
+    margin: 45px;
+    padding: 45px;
+    box-shadow: 25px 25px 15px var(--darker-pruply);
+    font-size: 16pt;
+
+     /* flexbox */
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+
+    & .title{
+        margin: 20px 20px 40px 20px;
+    }
+
+    & .input-field{
+        margin: 10px 20px 10px 20px;
+    }
+
+    & .input-txt{
+        padding: 0;
+        margin: 0;
+    }
+
+    & input{
+        margin: 0;
+        padding: 0;
+        height: 25px;
+        border: 1px solid var(--yellowish-gren);
+        background-color: var(--lighter-yellowish);
+        color: var(--purply-magenta);
+        font-size: 12pt;
+    }
+
+    & .btn{
+        margin: 40px 20px 20px 20px;
+        padding: 15px;
+        font-size: 14pt;
+        font-weight: bold;
+        background-color: var(--yellowish-gren);
+        border: 5px solid var(--darker-yellowish);
+        & a{
+            color: var(--purply-magenta);
+            text-decoration: none;
+        }
+    }
+    & .btn:active{
+        color: var(--lighter-purply);
+        background-color: var(--lighter-yellowish);
+        border: 5px solid var(--yellowish-gren);
+        box-shadow: 0px 0px 10px 1px var(--lighter-yellowish);
+    }
+    
+}
