sign up navigation added in python

--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -22,7 +22,7 @@
         <p class="txt">Do you already have an account?</p>
         <button class="btn"><a href="{% url 'login' %}">Log In</a></button>
         <p class="txt">Don't have an account yet?</p>
-        <button class="btn"><a href="">Sign Up</a></button>
+        <button class="btn"><a href="{% url 'signup' %}">Sign Up</a></button>
     </div>
 
     <script src="{% static 'myapp/js/script.js' %}"></script>
