--- a/myapp/templates/myapp/login.html
+++ b/myapp/templates/myapp/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Schedule my day</title>
+    <title>Schedule my day - Login</title>
     <link rel="stylesheet" href="{% static 'myapp/css/login.css' %}">
     <!-- --------- Fonts imports --------- -->
      <!-- Winky Rough -->
