sign up page style finished

--- a/myapp/templates/myapp/login.html
+++ b/myapp/templates/myapp/login.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <div class="container">
+        <!-- Title -->
         <h1 class="title">Login</h1>
         <div class="username input-field">
             <p class="input-txt">Username:</p>
