--- a/myapp/templates/myapp/signup.html
+++ b/myapp/templates/myapp/signup.html
@@ -14,6 +14,40 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="container">
+        <!-- Title -->
+        <h1 class="title">Sign Up</h1>
+        <!-- Username field -->
+        <div class="input-field">
+            <p class="input-txt">Chose a username:</p>
+            <input type="text" name="username" placeholder="Username" />
+        </div>
+        <!-- First name field -->
+        <div class="input-field">
+            <p class="input-txt">What is your first name?:</p>
+            <input type="text" name="first-name" placeholder="First name" />
+        </div>
+        <!-- Last name field -->
+        <div class="input-field">
+            <p class="input-txt">What is your last name?:</p>
+            <input type="text" name="last-name" placeholder="Last name" />
+        </div>
+        <!-- E-mail address field -->
+        <div class="input-field">
+            <p class="input-txt">What is your e-mail address?:</p>
+            <input type="text" name="email-address" placeholder="e-mail" />
+        </div>
+        <!-- Password field -->
+        <div class="input-field">
+            <p class="input-txt">Chose a password:</p>
+            <input type="password" name="password" placeholder="Pasword">
+        </div>
+        <!-- Confirm password field -->
+        <div class="input-field">
+            <p class="input-txt">Confirm password:</p>
+            <input type="password" name="confimr-password" placeholder="Confirm pasword">
+        </div>
+        <button class="btn">Login</button>
+    </div>
 </body>
 </html>
