--- a/myapp/templates/myapp/login.html
+++ b/myapp/templates/myapp/login.html
@@ -26,6 +26,7 @@
             <input type="password" name="password" placeholder="Pasword">
         </div>
         <button class="btn">Login</button>
+        <p class="forgot-pass">Forgot your password? <a href="{% url 'forgotPassword' %}" class="click-here">Click Here!</a></p>
     </div>
 
 </body>
