forgot password page styling done

--- a/myapp/templates/myapp/forgotPassword.html
+++ b/myapp/templates/myapp/forgotPassword.html
@@ -4,9 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Schedule my day - Forgot password</title>
+    <link rel="stylesheet" href="{% static 'myapp/css/forgotPassword.css' %}">
+    <!-- --------- Fonts imports --------- -->
+     <!-- Winky Rough -->
+    <link href="https://fonts.googleapis.com/css2?family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
+    <!-- Fredericka the Great -->
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <h1 class="title">Forgot your password?</h1>
+    <div class="container">
+        <h3 class="input-txt">What is your e-mail address?</h3>
+        <p>Please insert your e-mail address in order for us to send you a linck that will allwo you to change your password.</p>
+        <div class="input-field">
+            <p>e-mail address:</p>
+            <input type="text" name="email-address" placeholder="e-mail" />
+        </div>
+        <button class="btn">Send</button>
+    </div>
 </body>
 </html>
