--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
 
 <body>
+    <div id="threejs-background"></div>
     <!-- title -->
     <h1 class="title">Are you ready to "<span class="shedule">Schedule your day</span>"?</h1>
 
@@ -25,7 +26,7 @@
         <button class="btn"><a href="{% url 'signup' %}">Sign Up</a></button>
     </div>
 
-    <script src="{% static 'myapp/js/script.js' %}"></script>
+    <script type="module" src="{% static 'myapp/js/script.js' %}"></script>
 </body>
 
 </html>
