added the new geometry to each page

--- a/myapp/static/myapp/css/forgotPassword.css
+++ b/myapp/static/myapp/css/forgotPassword.css
@@ -19,7 +19,6 @@ body{
     /* Main font "Winky Rough" */
     font-family: "Winky Rough", sans-serif;
     /* Colors */
-    background-color: var(--purply-magenta);
     color: var(--yellowish-gren);
     /* Height of the page */
     height: 100vh;
@@ -87,4 +86,15 @@ body{
 p{
     width: 300px;
     font-size: 15pt;
+}
+
+#threejs-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1; 
+    width: 100vw;
+    height: 100vh;
+    pointer-events: none; 
+    overflow: hidden;
 }
