--- a/myapp/templates/myapp/forgotPassword.html
+++ b/myapp/templates/myapp/forgotPassword.html
@@ -14,7 +14,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Background image -->
+    <div id="threejs-background"></div>
+    <!-- title -->
     <h1 class="title">Forgot your password?</h1>
+    <!-- container -->
     <div class="container">
         <h3 class="input-txt">What is your e-mail address?</h3>
         <p>Please insert your e-mail address in order for us to send you a linck that will allwo you to change your password.</p>
@@ -24,5 +28,9 @@
         </div>
         <button class="btn">Send</button>
     </div>
+
+    <!-- Script -->
+    <script type="module" src="{% static 'myapp/js/script.js' %}"></script>
+
 </body>
 </html>
