--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
 
 <body>
+    <!-- Background image -->
     <div id="threejs-background"></div>
     <!-- title -->
     <h1 class="title">Are you ready to "<span class="shedule">Schedule your day</span>"?</h1>
