--- a/myapp/templates/myapp/signup.html
+++ b/myapp/templates/myapp/signup.html
@@ -14,6 +14,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Background image -->
+    <div id="threejs-background"></div>
+    <!-- Container -->
     <div class="container">
         <!-- Title -->
         <h1 class="title">Sign Up</h1>
@@ -49,5 +52,7 @@
         </div>
         <button class="btn">Login</button>
     </div>
+
+    <script type="module" src="{% static 'myapp/js/script.js' %}"></script>
 </body>
 </html>
