--- a/myapp/static/myapp/css/signup.css
+++ b/myapp/static/myapp/css/signup.css
@@ -19,7 +19,6 @@ body{
     /* Main font "Winky Rough" */
     font-family: "Winky Rough", sans-serif;
     /* Colors */
-    background-color: var(--purply-magenta);
     color: var(--yellowish-gren);
     /* Height of the page */
     height: 100vh;
@@ -82,4 +81,15 @@ body{
         box-shadow: 0px 0px 10px 1px var(--lighter-yellowish);
     }
     
+}
+
+#threejs-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1; 
+    width: 100vw;
+    height: 100vh;
+    pointer-events: none; 
+    overflow: hidden;
 }
