--- a/myapp/static/myapp/css/style.css
+++ b/myapp/static/myapp/css/style.css
@@ -20,6 +20,7 @@ body{
     font-family: "Winky Rough", sans-serif;
     /* Colors */
     color: var(--yellowish-gren);
+    background-color: var(--purply-magenta);
     /* Height of the page */
     height: 100vh;
 }
@@ -69,7 +70,8 @@ body{
     left: 0;
     z-index: -1; 
     width: 100vw;
-    height: 100vh;
+    height: 100px;
     pointer-events: none; 
     overflow: hidden;
+    box-shadow: 0 10px 10px 1px var(--darker-yellowish);
 }
