--- a/myapp/static/myapp/css/login.css
+++ b/myapp/static/myapp/css/login.css
@@ -102,3 +102,22 @@ body{
     overflow: hidden;
     box-shadow: 0 10px 10px 1px var(--darker-yellowish);
 }
+
+.footer{
+    background-color: var(--yellowish-gren);
+    height: 100px;
+    width: 100vw;
+    color: var(--lighter-purply);
+    margin: 50px 0 0 0;
+    padding-bottom: 0;
+    position: absolute;
+    bottom: 0;
+    box-shadow: 0 -10px 10px 1px var(--darker-yellowish);
+    
+
+    & .footer-txt{
+        text-align: center;
+        font-weight: bold;
+        font-size: 10pt;
+    }
+}
