--- a/myapp/templates/myapp/forgotPassword.html
+++ b/myapp/templates/myapp/forgotPassword.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Schedule my day - Forgot password</title>
+    <title>Schedule your day - Forgot password</title>
     <link rel="stylesheet" href="{% static 'myapp/css/forgotPassword.css' %}">
     <!-- --------- Fonts imports --------- -->
      <!-- Winky Rough -->
@@ -16,18 +16,24 @@
 <body>
     <!-- Background image -->
     <div id="threejs-background"></div>
+    <div class="empty-box"></div>
+
     <!-- title -->
     <h1 class="title">Forgot your password?</h1>
     <!-- container -->
     <div class="container">
         <h3 class="input-txt">What is your e-mail address?</h3>
-        <p>Please insert your e-mail address in order for us to send you a linck that will allwo you to change your password.</p>
+        <p class="container-txt">Please insert your e-mail address in order for us to send you a linck that will allwo you to change your password.</p>
         <div class="input-field">
-            <p>e-mail address:</p>
+            <p class="email-txt">e-mail address:</p>
             <input type="text" name="email-address" placeholder="e-mail" />
         </div>
         <button class="btn">Send</button>
     </div>
+
+    <footer class="footer">
+        <p class="footer-txt">This website was made using: HTML, CSS, JavaScript, Three.js and Django</p>
+    </footer>
 
     <!-- Script -->
     <script type="module" src="{% static 'myapp/js/script.js' %}"></script>
