--- a/myapp/templates/myapp/signup.html
+++ b/myapp/templates/myapp/signup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Schedule my day - Sign Up</title>
+    <title>Schedule your day - Sign Up</title>
     <link rel="stylesheet" href="{% static 'myapp/css/signup.css' %}">
     <!-- --------- Fonts imports --------- -->
      <!-- Winky Rough -->
@@ -51,8 +51,13 @@
             <p class="input-txt">Confirm password</p>
             <input type="password" name="confimr-password" placeholder="Confirm pasword">
         </div>
-        <button class="btn">Login</button>
+        <button class="btn">Sign Up</button>
     </div>
+
+    <div class="bottom-box"></div>
+    <footer class="footer">
+        <p class="footer-txt">This website was made using: HTML, CSS, JavaScript, Three.js and Django</p>
+    </footer>
 
     <script type="module" src="{% static 'myapp/js/script.js' %}"></script>
 </body>
