--- a/myapp/static/myapp/css/forgotPassword.css
+++ b/myapp/static/myapp/css/forgotPassword.css
@@ -47,6 +47,10 @@ body{
         margin: 10px 20px 10px 20px;
     }
 
+    & .email-txt{
+        margin-bottom: 0;
+    }
+
     & .input-txt{
         padding: 0;
         margin: 0;
@@ -84,7 +88,7 @@ body{
     
 }
 
-p{
+.container-txt{
     width: 300px;
     font-size: 15pt;
 }
@@ -93,10 +97,29 @@ p{
     position: fixed;
     top: 0;
     left: 0;
-    z-index: -1; 
+    z-index: +10; 
     width: 100vw;
     height: 100px;
     pointer-events: none; 
     overflow: hidden;
     box-shadow: 0 10px 10px 1px var(--darker-yellowish);
+}
+
+.footer{
+    background-color: var(--yellowish-gren);
+    height: 100px;
+    width: 100vw;
+    color: var(--lighter-purply);
+    margin: 50px 0 0 0;
+    padding-bottom: 0;
+    position: absolute;
+    bottom: 0;
+    box-shadow: 0 -10px 10px 1px var(--darker-yellowish);
+    
+
+    & .footer-txt{
+        text-align: center;
+        font-weight: bold;
+        font-size: 10pt;
+    }
 }
