--- a/myapp/static/myapp/css/signup.css
+++ b/myapp/static/myapp/css/signup.css
@@ -90,10 +90,30 @@ body{
     position: fixed;
     top: 0;
     left: 0;
-    z-index: -1; 
+    z-index: +10; 
     width: 100vw;
     height: 100px;
     pointer-events: none; 
     overflow: hidden;
     box-shadow: 0 10px 10px 1px var(--darker-yellowish);
+}
+
+
+
+.footer{
+    background-color: var(--yellowish-gren);
+    height: 100px;
+    width: 100vw;
+    color: var(--lighter-purply);
+    padding-bottom: 0;
+    position: relative;
+    bottom: 0;
+    box-shadow: 0 -10px 10px 1px var(--darker-yellowish);
+    
+
+    & .footer-txt{
+        text-align: center;
+        font-weight: bold;
+        font-size: 10pt;
+    }
 }
