--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
     <!-- Fredericka the Great -->
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
-
+</head>
 <body>
     <!-- Background image -->
     <div id="threejs-background"></div>
