--- a/myapp/static/myapp/css/mainPage.css
+++ b/myapp/static/myapp/css/mainPage.css
@@ -17,9 +17,6 @@ body{
     /* Colors */
     color: var(--yellowish-gren);
     background-color: var(--purply-magenta);
-    /* Height of the page */
-    height: 100vh;
-    width: 100vw;
 }
 
 .username{
@@ -33,41 +30,21 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
-    font-size: 16pt;
 
-     /* flexbox */
-     display: flex;
-     flex-direction: column;
-     justify-content: center;
-     align-items: center;
+    font-size: 16pt;
 
     & .title{
         margin: 20px 20px 40px 20px;
     }
 
-    & .input-field{
-        margin: 10px 20px 10px 20px;
-    }
-
-    & .input-txt{
-        padding: 0;
-        margin: 0;
-    }
-
-    & input{
-        margin: 0;
-        padding: 0;
-        height: 25px;
-        border: 1px solid var(--yellowish-gren);
-        background-color: var(--lighter-yellowish);
-        color: var(--purply-magenta);
-        font-size: 12pt;
+    & .category{
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     & .btn{
-        margin: 40px 20px 20px 20px;
-        padding: 15px;
+        margin: 30px;
         font-size: 14pt;
         font-weight: bold;
         background-color: var(--yellowish-gren);
@@ -82,6 +59,15 @@ body{
         background-color: var(--lighter-yellowish);
         border: 5px solid var(--yellowish-gren);
         box-shadow: 0px 0px 10px 1px var(--lighter-yellowish);
+    }
+
+    & .category-txt{
+        width: 500px;
+    }
+
+    & .category-title{
+        font-family: "Fredericka the Great", serif;
+
     }
     
 }
