--- a/myapp/static/myapp/css/mainPage.css
+++ b/myapp/static/myapp/css/mainPage.css
@@ -8,6 +8,9 @@
     --yellowish-gren: #b7d8b0;
     --darker-yellowish: #8bb782;
     --lighter-yellowish: #f3f8f2;
+
+    /* Reds */
+    --delete-red: #FF758F;
 }
 
 body {
@@ -39,7 +42,7 @@ body {
         margin: 20px 20px 40px 20px;
     }
 
-    & .category {
+    & .category-area {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -74,6 +77,7 @@ body {
 
     & .category-txt {
         width: 500px;
+        font-size: 15pt;
     }
 
     & .category-title {
@@ -83,16 +87,42 @@ body {
 
     & .newField {
         width: 300px;
+        font-size: 12pt;
     }
 
     & .miniBtn {
-        margin: 30px;
+        margin: 0 15px 0 15px;
         font-size: 10pt;
         font-weight: bold;
         background-color: var(--yellowish-gren);
         border: 5px solid var(--darker-yellowish);
     }
 
+    & .mini-container{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    & .delete-conatiner{
+        margin: 0 15px 0 15px;
+        padding: 6px;
+        font-size: 10pt;
+        background-color: var(--delete-red);
+        border: none;
+        border-radius: 5px;
+        box-shadow: 15px 15px 15px var(--darker-pruply);
+    }
+
+    & .delete-btn{
+        margin: 15px;
+        padding: 8px;
+        font-size: 10pt;
+        background-color: var(--delete-red);
+        border: none;
+        border-radius: 5px;
+        box-shadow: 15px 15px 15px var(--darker-pruply);
+    }
 }
 
 .empty-box {
